<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="mode1">Поиск</string>
    <string name="mode2">Медиатека</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="offerUrl">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="shareText">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="toastText">Нет доступных приложений</string>
    <string name="recipientEmail">rozenkov.vladislav@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить поисковый запрос</string>
    <string name="share_via">Поделиться через</string>
    <string name="email_chooser_title">Отправить письмо через</string>
    <string name="nothing">Ничего не нашлось</string>
    <string name="communication_problems">Проблемы со связью</string>
    <string name="communication_problems2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_the_history">Очистить историю</string>
    <string name="play">Play track</string>
    <string name="like">Like track</string>
    <string name="add">Add to playlist</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="media_library">Медиатека</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="empty_favorite_tracks">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_operation_error">Не удалось обновить избранное. Попробуйте открыть плеер снова.</string>
</resources>
