<?xml version="1.0" encoding="utf-8"?>

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.practicum.playlistmaker.media_library.presentation.MediaLibraryFragment"
        android:label="@string/media_library" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.practicum.playlistmaker.search.presentation.SearchFragment"
        android:label="@string/search">

        <action
            android:id="@+id/action_searchFragment_to_mediaFragment"
            app:destination="@id/mediaFragment" />

    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.practicum.playlistmaker.settings.presentation.SettingsFragment"
        android:label="@string/settings_title" />

    <fragment
        android:id="@+id/mediaFragment"
        android:name="com.practicum.playlistmaker.player.presentation.MediaFragment">

        <argument
            android:name="track"
            app:argType="com.practicum.playlistmaker.core.navigation.model.TrackParcelable" />

    </fragment>

</navigation>