<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp"/>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            app:navigationIcon="@drawable/arrow"
            app:navigationIconTint="?attr/colorOnSurface"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/image_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:src="@drawable/snake"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/left_guideline"/>

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_title"
            android:textColor="?attr/colorOnSurface"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="Yesterday (Remastered 2009)"
            app:layout_constraintTop_toBottomOf="@id/image_cover"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

        <TextView
            android:id="@+id/executor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="?attr/colorOnSurface"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="The Beatles"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

        <ImageButton
            android:id="@+id/added"
            android:contentDescription="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:src="@drawable/button_not_added"
            android:background="?attr/colorSurface"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/executor"/>

        <ImageButton
            android:id="@+id/play"
            android:contentDescription="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/button_play"
            android:background="?attr/colorSurface"
            app:layout_constraintStart_toEndOf="@id/added"
            app:layout_constraintTop_toBottomOf="@id/executor"
            app:layout_constraintEnd_toStartOf="@id/like"/>

        <ImageButton
            android:id="@+id/like"
            android:contentDescription="@string/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:src="@drawable/button_not_like"
            android:background="?attr/colorSurface"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/executor"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="2:33"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/play"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

        <TextView
            android:id="@+id/duration_title"
            style="@style/TrackInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/duration"
            app:layout_constraintTop_toBottomOf="@id/time"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/duration_value" />

        <TextView
            android:id="@+id/duration_value"
            style="@style/TrackInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5:35"
            app:layout_constraintTop_toTopOf="@id/duration_title"
            app:layout_constraintBottom_toBottomOf="@id/duration_title"
            app:layout_constraintStart_toEndOf="@id/duration_title"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

        <TextView
            android:id="@+id/album_title"
            style="@style/TrackInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="@string/album"
            app:layout_constraintTop_toBottomOf="@id/duration_title"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/album_value"/>

        <TextView
            android:id="@+id/album_value"
            style="@style/TrackInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Yesterday (Remastered 2009)"
            app:layout_constraintTop_toTopOf="@id/album_title"
            app:layout_constraintBottom_toBottomOf="@id/album_title"
            app:layout_constraintStart_toEndOf="@id/album_title"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

        <TextView
            android:id="@+id/year_title"
            style="@style/TrackInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="@string/year"
            app:layout_constraintEnd_toStartOf="@id/year_value"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/album_title" />

        <TextView
            android:id="@+id/year_value"
            style="@style/TrackInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1965"
            app:layout_constraintTop_toTopOf="@id/year_title"
            app:layout_constraintBottom_toBottomOf="@id/year_title"
            app:layout_constraintStart_toEndOf="@id/year_title"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

        <TextView
            android:id="@+id/genre_title"
            style="@style/TrackInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="@string/genre"
            app:layout_constraintTop_toBottomOf="@id/year_title"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/genre_value" />

        <TextView
            android:id="@+id/genre_value"
            style="@style/TrackInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Rock"
            app:layout_constraintTop_toTopOf="@id/genre_title"
            app:layout_constraintBottom_toBottomOf="@id/genre_title"
            app:layout_constraintStart_toEndOf="@id/genre_title"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

        <TextView
            android:id="@+id/country_title"
            style="@style/TrackInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="9dp"
            android:paddingBottom="8dp"
            android:text="@string/country"
            app:layout_constraintTop_toBottomOf="@id/genre_title"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/country_value"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/country_value"
            style="@style/TrackInfoValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Великобритания"
            app:layout_constraintTop_toTopOf="@id/country_title"
            app:layout_constraintBottom_toBottomOf="@id/country_title"
            app:layout_constraintStart_toEndOf="@id/country_title"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>