<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search"
    android:background="?attr/colorSurface"
    style="@style/LinearLayoutStyle">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:contentInsetStartWithNavigation="12dp"
        app:title="@string/search"
        app:navigationIcon="@drawable/arrow"
        app:titleTextColor="?attr/colorOnSurface"
        app:navigationIconTint="?attr/colorOnSurface"
        app:titleTextAppearance="@style/AppToolbarTitleStyle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:drawableStart="@drawable/light_mode1"
            android:drawableTint="?attr/colorControlNormal"
            android:drawablePadding="8dp"
            android:paddingLeft="13dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="48dp"
            android:hint="@string/search"
            android:textColorHint="?attr/colorControlNormal"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:maxLines="1"
            android:inputType="text"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"/>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/cross"
            android:visibility="gone"
            android:scaleType="center"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/clear_search"
            app:tint="?attr/colorControlNormal" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loadingGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:visibility="gone"
            android:indeterminate="true"
            app:indicatorColor="@color/blue"
            app:layout_constraintTop_toTopOf="@id/loadingGuideline"
            app:layout_constraintBottom_toBottomOf="@id/loadingGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stateView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            tools:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/stateImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/sad_smiley_face"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="102dp"/>

            <TextView
                android:id="@+id/stateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Проблемы со связью"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="19sp"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintTop_toBottomOf="@id/stateImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/stateMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Загрузка не удалась. Проверьте подключение к интернету"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="19sp"
                android:textColor="?attr/colorOnSurface"
                android:textAlignment="center"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                app:layout_constraintTop_toBottomOf="@id/stateTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/stateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="?attr/colorSurface"
                app:backgroundTint="?attr/colorOnSurface"
                app:cornerRadius="24dp"
                tools:visibility="visible"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/stateMessage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/historyContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_were_looking_for"
                android:textSize="19sp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="?attr/colorOnSurface"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="42dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearHistoryBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSurface"
                app:backgroundTint="?attr/colorOnSurface"
                android:text="@string/clear_the_history"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                app:cornerRadius="54dp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>